fixed an issue where the open button overlapped the save button

--- a/src/neo/components/ActionButtons/Open/style.css
+++ b/src/neo/components/ActionButtons/Open/style.css
@@ -8,6 +8,8 @@
   height: 0;
   padding: 0;
   border: none;
+  top: -1000px;
+  left: -1000px;
 }
 
 .file-input > input:focus ~ label {
